<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/action_theme_light"
            android:icon="@drawable/ic_brightness_5"
            android:title="@string/nav_theme_light" />
        <item
            android:id="@+id/action_theme_dark"
            android:icon="@drawable/ic_brightness_4"
            android:title="@string/nav_theme_dark" />
        <item
            android:id="@+id/action_theme_system"
            android:icon="@drawable/ic_expand_more"
            android:title="@string/nav_theme_system" />
        <item
            android:id="@+id/action_export"
            android:icon="@drawable/ic_content_copy"
            android:title="@string/nav_export" />
    </group>
</menu>
